# DreamCleanr

./: .gitignore  AGENTS.md  ANALYTICS_AND_KPI_PLAN.md  AUTH_BILLING_ENTITLEMENTS_SPEC.md  CHANGELOG.md  CLOUD_ARCHITECTURE_FUTURE.md  CODEOWNERS  COMMERCIAL_BACKEND_ARCHITECTURE.md  COMPLIANCE.md  CONTRIBUTING.md  CREATOR_OUTREACH.md  DEPLOYMENT_ARCHITECTURE.md  DREAMCLEANR_MASTER_STRATEGY.md  DREAMCLEANR_SKILLS.md  FEATURE_SPECS.md  FIGMA_READY_UI_BRIEF.md  FINAL_DEPLOYMENT_REPORT.md  GITHUB_SYNC_AND_RELEASE.md  GROWTH_LAUNCH_PLAYBOOK.md  INVESTOR_PITCH_DECK.md  IOS_APP_STORE_READINESS.md  LAUNCH_PLAN.md  LAUNCH_VERSION_PLAYBOOK.md  LICENSE  MACOS_SHELL_PLAN.md  MARKET_RESEARCH_MEMO.md  MARKET_RESEARCH_PLAN.md  MARKET_STRATEGY.md  MONETIZATION_PLAN.md  MRR_ROADMAP.md  ONBOARDING_CONVERSION_SPEC.md  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  STRIPE_COMMERCIAL_ARCHITECTURE.md  TERMS.md  TEST_AND_DEBUG.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  pro-interest.yml
.github/workflows/: business-review.yml  ci.yml  governance-review.yml  install-smoke.yml  minimal-runner-test.yml  ops-health.yml  pages-verify.yml  pages.yml  release-native.yml  release.yml
apple/: Package.swift
apple/Sources/DreamCleanrAppleShared/: ReceiptSummary.swift
apple/Sources/DreamCleanrCompanionKit/: CompanionDashboardView.swift
apple/Sources/DreamCleanrShellPrototype/: ShellApp.swift
audit-runs/2026-05-25/: SCOPE.md
audit-runs/2026-05-25/backlog/: BACKLOG.md  DEFER.md  SHIP_THIS_RUN.md
audit-runs/2026-05-25/pr/: PR_DESCRIPTION.md
audit-runs/2026-05-25/raw/: branding-market-analysis.md  mode-tiering-analysis.md  product-line-build-plan.md
codex-skills/dreamcleanr-commercial-architecture-operator/: SKILL.md
codex-skills/dreamcleanr-commercial-architecture-operator/agents/: openai.yaml
codex-skills/dreamcleanr-commercial-architecture-operator/references/: incubation-boundaries.md
codex-skills/dreamcleanr-governance-compliance-operator/: SKILL.md
codex-skills/dreamcleanr-governance-compliance-operator/agents/: openai.yaml
codex-skills/dreamcleanr-growth-launch-operator/: SKILL.md
codex-skills/dreamcleanr-growth-launch-operator/agents/: openai.yaml
codex-skills/dreamcleanr-native-shell-engineer/: SKILL.md
codex-skills/dreamcleanr-native-shell-engineer/agents/: openai.yaml
codex-skills/dreamcleanr-release-launch-operator/: SKILL.md
codex-skills/dreamcleanr-release-launch-operator/agents/: openai.yaml
codex-skills/dreamcleanr-release-launch-operator/references/: release-surface-map.md
codex-skills/dreamcleanr-strategy-analysis-operator/: SKILL.md
codex-skills/dreamcleanr-strategy-analysis-operator/agents/: openai.yaml
codex-skills/dreamcleanr-strategy-analysis-operator/references/: analysis-checklist.md  codex-master-prompt.md
codex-skills/dreamcleanr-toolchain-intelligence-engineer/: SKILL.md
codex-skills/dreamcleanr-toolchain-intelligence-engineer/agents/: openai.yaml
dreamcleanr/: __init__.py  _ed25519.py  cli.py  core.py  license.py  mcp_server.py  models.py  reporting.py  scheduler.py
installer/: DreamCleanr-0.3.5.pkg
integrations/: claude-mcp.json  codex-mcp.toml  vscode-mcp.json
ios/: README.md
macos/: README.md
macos/DreamCleanrMenubar/: Package.swift  README.md
macos/DreamCleanrMenubar/Resources/: Info.plist
macos/DreamCleanrMenubar/Sources/: App.swift  CliRunner.swift  DiskPressureMonitor.swift  LatestReportReader.swift  ReportsHistoryReader.swift  ScheduleState.swift
macos/DreamCleanrMenubar/Tests/: CliRunnerTests.swift  LatestReportReaderTests.swift  ReportsHistoryReaderTests.swift
reports/: sample-cleanup-report.html  sample-cleanup-report.json  sample-cleanup-summary.json  sample-team-export.csv  sample-team-export.json
scripts/: bootstrap.sh  github_review.py  install.sh  install_codex_skills.sh  issue_license.py  update.sh
site/: app.js  compare-cleanmymac.html  demo-scan.json  faq.html  index.html  manifest.webmanifest  mcp-setup.html  pricing.html  privacy.html  robots.txt  security.html  sitemap.xml  styles.css  support.html  terms.html
tests/: test_cli.py  test_core.py  test_distribution.py  test_ed25519.py  test_github_review.py  test_license.py  test_mcp_server.py  test_reporting.py  test_scheduler.py
