[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamcleanr"
version = "0.3.0"
description = "DreamCleanr: clean while you sleep with safe macOS cleanup, MCP tools, and one-page receipts."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jonathan Lynch" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
]

[project.urls]
Homepage = "https://jlsport18.github.io/DreamCleanr/"
Issues = "https://github.com/jlsport18/DreamCleanr/issues"
Repository = "https://github.com/jlsport18/DreamCleanr"

[project.scripts]
dreamcleanr = "dreamcleanr.cli:main"
dreamcleanr-mcp = "dreamcleanr.mcp_server:main"

[tool.setuptools]
packages = ["dreamcleanr"]
