[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamcleanr"
version = "0.4.0"
description = "DreamCleanr: clean while you sleep with safe macOS cleanup, MCP tools, and one-page receipts."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["macos", "cleanup", "docker", "claude", "codex", "mcp", "developer-tools"]
authors = [
  { name = "Jonathan Lynch" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
]

[project.urls]
Homepage = "https://jlsport18.github.io/DreamCleanr/"
Documentation = "https://jlsport18.github.io/DreamCleanr/"
Issues = "https://github.com/jlsport18/DreamCleanr/issues"
Repository = "https://github.com/jlsport18/DreamCleanr"
Changelog = "https://github.com/jlsport18/DreamCleanr/blob/main/CHANGELOG.md"
Privacy = "https://jlsport18.github.io/DreamCleanr/privacy.html"
Security = "https://jlsport18.github.io/DreamCleanr/security.html"
Terms = "https://jlsport18.github.io/DreamCleanr/terms.html"
Support = "https://jlsport18.github.io/DreamCleanr/support.html"

[project.scripts]
dreamcleanr = "dreamcleanr.cli:main"
dreamcleanr-mcp = "dreamcleanr.mcp_server:main"
# Brand alias — the product ships as "Sweep"; the CLI help + license docs already
# instruct users to run `sweep …` (e.g. cli.py: "sweep license activate"). Expose
# `sweep` as a first-class entry point so those instructions actually work, while
# keeping `dreamcleanr` for back-compat.
sweep = "dreamcleanr.cli:main"

[tool.setuptools]
packages = ["dreamcleanr"]
